# clustering_pca

./: .replit  README.md  main.py  pyproject.toml  replit.nix  replit_zip_error_log.txt
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: repl_state.json
.streamlit/: config.toml
.upm/: store.json
