[tool.poetry]
name = "repl-nix-seoulbikeclustering"
version = "0.1.0"
description = ""
authors = ["Saksham Adhikari pqo14@txstate.edu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
scikit-learn = "^1.5.2"
plotly = "^5.24.1"
pandas = "^2.2.3"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
